[tool.poetry]
name = "thin-plate-spline-motion-model"
version = "0.1.0"
description = ""
authors = ["Ethan Wu <304-ethwu0816004@users.noreply.git.cs.nctu.edu.tw>"]
readme = "README.md"
packages = [{include = "thin_plate_spline_motion_model"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
imageio = "^2.31.1"
imageio-ffmpeg = "^0.4.8"
matplotlib = "^3.7.1"
scikit-image = "^0.21.0"
fastapi = "^0.97.0"
pydantic = "^1.10.9"
uvicorn = "^0.22.0"
python-multipart = "^0.0.6"
opencv-python = "^4.7.0.72"
torchvision = "^0.15.2"
scipy = "^1.10.1"
cffi = "^1.15.1"
cycler = "^0.11.0"
decorator = "^5.1.1"
face-alignment = "^1.4.0"
kiwisolver = "^1.4.4"
networkx = "^3.1"
numpy = "^1.24.3"
pandas = "^2.0.2"
Pillow = "^9.5.0"
pycparser = "^2.21"
pyparsing = "^3.0.9"
python-dateutil = "^2.8.2"
pytz = "^2023.3"
PyWavelets = "^1.4.1"
PyYAML = "^6.0"
scikit-learn = "^1.2.2"
six = "^1.16.0"
torch = "^2.0.1"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
